--- a/html/homepage.html
+++ b/html/homepage.html
@@ -40,19 +40,19 @@
             <h2>SIMILAR</h2>
             <div class="movie-carousel">
                 <div class="movie">
-                   <img src="/wedfigam/icon/null7 (2).png" alt="Movie1">
+                   <img src="/icon/null7 (2).png" alt="Movie1">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null3.png" alt="Movie 2">
+                    <img src="/icon/null3.png" alt="Movie 2">
                 </div>
                 <div class="movie1">
-                    <img src="/wedfigam/icon/null4.png" alt="Movie 3">
+                    <img src="/icon/null4.png" alt="Movie 3">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null5.png" alt="Movie 4">
+                    <img src="/icon/null5.png" alt="Movie 4">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null6 (2).png" alt="Movie 5">
+                    <img src="/icon/null6 (2).png" alt="Movie 5">
                 </div>
             </div>
         </div>
@@ -60,26 +60,26 @@
         <div class="section">
             <h2>FILMS POPULAIRES</h2>
             <div class="movie-details">
-                <h3><a href="/wedfigam/html/battman.html">BATMAN</a></h3>
+                <h3><a href="/html/battman.html">BATMAN</a></h3>
                 <p>⭐⭐⭐⭐⭐   5.9   2024</p>
                 <p>Pendant ce temps, dans un autre univers. >> Dans une variation du genre classique, Madame Web raconte les origines de l'une des plus énigmatiques héroïnes des bandes dessinées Marvel. Le suspense met en vedette Dakota Johnson dans le rôle de Cassandra Webb, une ambulancière de Manhattan ayant des dons de voyance. Contrainte de faire face à des révélations surs...</p>
                 <a href="#" class="button">VOIR MAINTENANT <i class="fa-solid fa-play"></i></a>
             </div>
             <div class="movie-carousel">
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh.png" alt="Movie 2">
+                    <img src="/icon/anh.png" alt="Movie 2">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh1.png" alt="Movie 3">
+                    <img src="/icon/anh1.png" alt="Movie 3">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh2.png" alt="Movie 4">
+                    <img src="/icon/anh2.png" alt="Movie 4">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh3.png" alt="Movie 5">
+                    <img src="/icon/anh3.png" alt="Movie 5">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh.png" alt="Movie1">
+                    <img src="/icon/anh.png" alt="Movie1">
                 </div>
             </div>
         </div>
@@ -88,19 +88,19 @@
             <h2>FILMS RECENT</h2>
             <div class="movie-carousel">
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh1.png" alt="Movie 1">
+                    <img src="/icon/anh1.png" alt="Movie 1">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh2.png" alt="Movie 2">
+                    <img src="/icon/anh2.png" alt="Movie 2">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh.png" alt="Movie 3">
+                    <img src="/icon/anh.png" alt="Movie 3">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh3.png" alt="Movie 4">
+                    <img src="/icon/anh3.png" alt="Movie 4">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh1.png" alt="Movie 5">
+                    <img src="/icon/anh1.png" alt="Movie 5">
                 </div>
             </div>
         </div>
@@ -130,19 +130,19 @@
             </div>
             <div class="movie-carousel">
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh.png" alt="Movie1">
+                    <img src="/icon/anh.png" alt="Movie1">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh1.png" alt="Movie 2">
+                    <img src="/icon/anh1.png" alt="Movie 2">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh2.png" alt="Movie 3">
+                    <img src="/icon/anh2.png" alt="Movie 3">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh3.png" alt="Movie 4">
+                    <img src="/icon/anh3.png" alt="Movie 4">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/anh.png" alt="Movie 5">
+                    <img src="/icon/anh.png" alt="Movie 5">
                 </div>
             </div>
         </div>
@@ -151,19 +151,19 @@
             <h2>DRAMES</h2>
             <div class="movie-carousel">
                 <div class="movie">
-                    <img src="/wedfigam/icon/null7 (2).png" alt="Movie 1">
+                    <img src="/icon/null7 (2).png" alt="Movie 1">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null4.png" alt="Movie 2">
+                    <img src="/icon/null4.png" alt="Movie 2">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null3.png" alt="Movie 3">
+                    <img src="/icon/null3.png" alt="Movie 3">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null6 (2).png" alt="Movie 4">
+                    <img src="/icon/null6 (2).png" alt="Movie 4">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/Frame 42731817.png" alt="Movie 5">
+                    <img src="/icon/Frame 42731817.png" alt="Movie 5">
                 </div>
             </div>
         </div>
@@ -172,17 +172,17 @@
             <h2>TV LIVE</h2>
             <div class="movie-carousel">
                 <div class="movie">
-                    <img src="/wedfigam/icon/null3.png" alt="Movie1">
+                    <img src="/icon/null3.png" alt="Movie1">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null7 (2).png" alt="Movie2">
+                    <img src="/icon/null7 (2).png" alt="Movie2">
                 </div> <div class="movie">
-                    <img src="/wedfigam/icon/null5.png" alt="Movie3">
+                    <img src="/icon/null5.png" alt="Movie3">
                 </div> <div class="movie">
-                    <img src="/wedfigam/icon/null4.png" alt="Movie4">
+                    <img src="/icon/null4.png" alt="Movie4">
                 </div>
                 <div class="movie">
-                    <img src="/wedfigam/icon/null2.png" alt="Movie5">
+                    <img src="/icon/null2.png" alt="Movie5">
                 </div>
     </div>
     <div class="section">
@@ -195,19 +195,19 @@
         </div>
         <div class="movie-carousel">
             <div class="movie">
-                <img src="/wedfigam/icon/null7 (2).png" alt="Movie 1">
+                <img src="/icon/null7 (2).png" alt="Movie 1">
             </div>
             <div class="movie">
-                <img src="/wedfigam/icon/null6 (2).png" alt="Movie 2">
+                <img src="/icon/null6 (2).png" alt="Movie 2">
             </div>
             <div class="movie">
-                <img src="/wedfigam/icon/null4.png" alt="Movie 3">
+                <img src="/icon/null4.png" alt="Movie 3">
             </div>
             <div class="movie">
-                <img src="/wedfigam/icon/null5.png" alt="Movie 4">
+                <img src="/icon/null5.png" alt="Movie 4">
             </div>
             <div class="movie">
-                <img src="/wedfigam/icon/null2.png" alt="Movie 5">
+                <img src="/icon/null2.png" alt="Movie 5">
             </div>
         </div>
     </div>
@@ -227,7 +227,7 @@
             <h2>ANA LILY AMIRPOUR </h2>
             <form>
                 <div class="modal-movie">
-                    <img src="/wedfigam/icon/anh6.png" alt="Movie">
+                    <img src="/icon/anh6.png" alt="Movie">
                 </div>
               <div class="text">
                 <h4>THE AMAZING SCREW-ON </h4>
@@ -252,10 +252,10 @@
             </form>
             <h2>Étape 1: Choisissez votre photo de profil</h2>
             <div class="Remove">
-                <img src="/wedfigam/icon/Remove-bg.ai_1716027962214.png" alt="Avata">
+                <img src="/icon/Remove-bg.ai_1716027962214.png" alt="Avata">
             </div>
             <div class="next1">
-                <a href="/wedfigam/html/login.html">
+                <a href="/html/login.html">
                 <button>CONTINUER</button>
             </a>
             </div>
@@ -267,11 +267,11 @@
             <h1>Configuration de votre <span class=" text">compte</span></h1>
             <form>
                 <h3>Étape 2: Définissez vos préférences de catégories de films</h3>
-                <a href="/wedfigam/html/login.html">
+                <a href="/html/login.html">
                 <button>Action</button>
             </a>
             </div>
         </div>
     </div>
-    <script src="/wedfigam/js/script1.js"></script>
+    <script src="/js/script1.js"></script>
 </body>
