--- a/html/mesfavoris.html
+++ b/html/mesfavoris.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Home Page</title>
-    <link rel="stylesheet" href="/wedfigam/css/style3.css">
+    <link rel="stylesheet" href="/css/style3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="header1">
-           <a href="/wedfigam/html/homepage.html"><img src="/wedfigam/icon/null (2).png" alt="Madame Web Poster"></a>
+           <a href="/html/homepage.html"><img src="/icon/null (2).png" alt="Madame Web Poster"></a>
             <div class="talet1">
-                <a href="/wedfigam/html/homepage.html">ACCEUL</a>
-                <a href="/wedfigam/html/battman.html">FILMS</a>
-                <a href="/wedfigam/html/tvlive.html">TVLIVES</a>
-                <a href="/wedfigam/html/mesfavoris.html">MES FAVORIS</a>
-                <a href="/wedfigam/html/index.html">APROPOS</a>
+                <a href="/html/homepage.html">ACCEUL</a>
+                <a href="/html/battman.html">FILMS</a>
+                <a href="/html/tvlive.html">TVLIVES</a>
+                <a href="/html/mesfavoris.html">MES FAVORIS</a>
+                <a href="/html/index.html">APROPOS</a>
                 </div>
                 <i  class="fa-solid fa-magnifying-glass" style="color: #74C0FC;"></i>
                 <div class="avat">
@@ -28,7 +28,7 @@
                 <section class="favorites">
                     <h1>Les films que vous avez marqués comme favoris.</h1>
                     <div class="movie-card">
-                        <img src="/wedfigam/icon/anh6.png" alt="Movie Poster">
+                        <img src="/icon/anh6.png" alt="Movie Poster">
                         <div class="movie-details">
                             <h2>THE AMAZING SCREW-ON</h2>
                             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -57,7 +57,7 @@
                 </section>
                 <section class="favorites">
                     <div class="movie-card">
-                        <img src="/wedfigam/icon/null2.png" alt="Movie Poster">
+                        <img src="/icon/null2.png" alt="Movie Poster">
                         <div class="movie-details">
                             <h2>THE AMAZING SCREW-ON</h2>
                             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -71,7 +71,7 @@
                 </section>
                 <section class="favorites">
                     <div class="movie-card">
-                        <img src="/wedfigam/icon/null7 (2).png" alt="Movie Poster">
+                        <img src="/icon/null7 (2).png" alt="Movie Poster">
                         <div class="movie-details">
                             <h2>THE AMAZING SCREW-ON</h2>
                             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -85,7 +85,7 @@
                 </section>
                 <section class="favorites">
                     <div class="movie-card">
-                        <img src="/wedfigam/icon/null3 (2).png" alt="Movie Poster">
+                        <img src="/icon/null3 (2).png" alt="Movie Poster">
                         <div class="movie-details">
                             <h2>THE AMAZING SCREW-ON</h2>
                             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -99,7 +99,7 @@
                 </section>
                 <section class="favorites">
                     <div class="movie-card">
-                        <img src="/wedfigam/icon/MOVIE PAGE (6).png" alt="Movie Poster">
+                        <img src="/icon/MOVIE PAGE (6).png" alt="Movie Poster">
                         <div class="movie-details">
                             <h2>THE AMAZING SCREW-ON</h2>
                             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -132,5 +132,5 @@
         </div>
     </div>
 </div>
-    <script src="/wedfigam/js/script2.js"></script>
+    <script src="/js/script2.js"></script>
 </body>
