--- a/html/index.html
+++ b/html/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Home Page</title>
-    <link rel="stylesheet" href="/wedfigam/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="header1">
-           <a href="/wedfigam/html/homepage.html"><img src="/wedfigam/icon/null (2).png" alt="Madame Web Poster"></a>
+           <a href="/html/homepage.html"><img src="/icon/null (2).png" alt="Madame Web Poster"></a>
             <div class="talet1">
-                <a href="/wedfigam/html/homepage.html">ACCEUL</a>
-                <a href="/wedfigam/html/battman.html">FILMS</a>
-                <a href="/wedfigam/html/tvlive.html">TVLIVES</a>
-                <a href="/wedfigam/html/mesfavoris.html">MES FAVORIS</a>
-                <a href="/wedfigam/html/index.html">APROPOS</a>
+                <a href="/html/homepage.html">ACCEUL</a>
+                <a href="/html/battman.html">FILMS</a>
+                <a href="/html/tvlive.html">TVLIVES</a>
+                <a href="/html/mesfavoris.html">MES FAVORIS</a>
+                <a href="/html/index.html">APROPOS</a>
                 </div>
                 <i  class="fa-solid fa-magnifying-glass" style="color: #74C0FC;"></i>
                 <div class="avat">
@@ -35,11 +35,11 @@
 <main>
     <section class="hero">
         <div class="movie-cards">
-            <img src="/wedfigam/icon/null2.png" alt="Movie 1">
-            <img src="/wedfigam/icon/null3 (2).png" alt="Movie 2">
-            <img src="/wedfigam/icon/null4.png" alt="Movie 3">
-            <img src="/wedfigam/icon/null6 (2).png" alt="Movie 4">
-            <img src="/wedfigam/icon/null7 (2).png" alt="Movie 5">
+            <img src="/icon/null2.png" alt="Movie 1">
+            <img src="/icon/null3 (2).png" alt="Movie 2">
+            <img src="/icon/null4.png" alt="Movie 3">
+            <img src="/icon/null6 (2).png" alt="Movie 4">
+            <img src="/icon/null7 (2).png" alt="Movie 5">
         </div>
     </section>
 
@@ -106,5 +106,5 @@
             <i class="fa-brands fa-github"></i>
          </div>
     </div>
-    <script src="/wedfigam/js/script5.js"></script>
+    <script src="/js/script5.js"></script>
 </body>
