--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Chill</title>
-    <link rel="stylesheet" href="/wedfigam/css/style4.css">
+    <link rel="stylesheet" href="/css/style4.css">
 </head>
 <body>
     <div class="container">
@@ -32,6 +32,6 @@
             </div>
         </div>
     </div>
-    <script src="/wedfigam/js/script4.js"></script>
+    <script src="/js/script4.js"></script>
 </body>
 </html>
