--- a/html/tvlive.html
+++ b/html/tvlive.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Home Page</title>
-    <link rel="stylesheet" href="/wedfigam/css/style5.css">
+    <link rel="stylesheet" href="/css/style5.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="header1">
-           <a href="/wedfigam/html/homepage.html"><img src="/wedfigam/icon/null (2).png" alt="Madame Web Poster"></a>
+           <a href="/html/homepage.html"><img src="/icon/null (2).png" alt="Madame Web Poster"></a>
             <div class="talet1">
-                <a href="/wedfigam/html/homepage.html">ACCEUL</a>
-                <a href="/wedfigam/html/battman.html">FILMS</a>
-                <a href="/wedfigam/html/tvlive.html">TVLIVES</a>
-                <a href="/wedfigam/html/mesfavoris.html">MES FAVORIS</a>
-                <a href="/wedfigam/html/index.html">APROPOS</a>
+                <a href="/html/homepage.html">ACCEUL</a>
+                <a href="/html/battman.html">FILMS</a>
+                <a href="/html/tvlive.html">TVLIVES</a>
+                <a href="/html/mesfavoris.html">MES FAVORIS</a>
+                <a href="/html/index.html">APROPOS</a>
                 </div>
                 <i  class="fa-solid fa-magnifying-glass" style="color: #74C0FC;"></i>
                 <div class="avat">
@@ -43,30 +43,30 @@
 
         </section>
         <section class="gallery">
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (1).png" alt="Image 1"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (2).png" alt="Image 2"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (3).png" alt="Image 3"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (4).png" alt="Image 4"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (5).png" alt="Image 5"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (6).png" alt="Image 6"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (7).png" alt="Image 7"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (1).png" alt="Image 8"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (2).png" alt="Image 9"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (3).png" alt="Image 10"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (4).png" alt="Image 11"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (5).png" alt="Image 12"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (6).png" alt="Image 13"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (7).png" alt="Image 14"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (8).png" alt="Image 15"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (1).png" alt="Image 16"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (2).png" alt="Image 17"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (3).png" alt="Image 18"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (4).png" alt="Image 19"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (5).png" alt="Image 20"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (6).png" alt="Image 21"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (7).png" alt="Image 22"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (8).png" alt="Image 23"></div>
-            <div class="gallery-item"><img src="/wedfigam/icon/CARD MOVIE (1).png" alt="Image 24"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (1).png" alt="Image 1"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (2).png" alt="Image 2"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (3).png" alt="Image 3"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (4).png" alt="Image 4"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (5).png" alt="Image 5"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (6).png" alt="Image 6"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (7).png" alt="Image 7"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (1).png" alt="Image 8"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (2).png" alt="Image 9"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (3).png" alt="Image 10"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (4).png" alt="Image 11"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (5).png" alt="Image 12"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (6).png" alt="Image 13"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (7).png" alt="Image 14"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (8).png" alt="Image 15"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (1).png" alt="Image 16"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (2).png" alt="Image 17"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (3).png" alt="Image 18"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (4).png" alt="Image 19"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (5).png" alt="Image 20"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (6).png" alt="Image 21"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (7).png" alt="Image 22"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (8).png" alt="Image 23"></div>
+            <div class="gallery-item"><img src="/icon/CARD MOVIE (1).png" alt="Image 24"></div>
         </section>
         <div class="vor">
             <button>VORPLUS</button>
@@ -87,7 +87,7 @@
             <h2>BATTMAN</h2>
             <form>
                 <div class="modal-movie">
-                    <img src="/wedfigam/icon/anh4.png" alt="Movie">
+                    <img src="/icon/anh4.png" alt="Movie">
                 </div>
               <div class="text">
                 <h4>THE AMAZING SCREW-ON</h4>
@@ -99,5 +99,5 @@
             </form>
         </div>
     </div>
-    <script src="/wedfigam/js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
